Add preview message and links for the Management Console

--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -5,7 +5,9 @@
       = link_to root_path, :class => 'brand' do
         %img{:src => image_path('openshift-logo-white.png')}
 
-      %span.navbar-text.headline Management Console
+      %span.navbar-text.headline 
+        Management Console
+        %span.label.label-important{:style => 'font-size: 18px;'} Preview
 
       -#= link_to root_path, :class => 'brand' do
         Open
