--- a/site/app/views/control_panel/index.html.haml
+++ b/site/app/views/control_panel/index.html.haml
@@ -14,6 +14,17 @@
   -# = render :partial => 'control_panel/tabs'
 
   .content
+
+    .alert.alert-info.new-console{:style => 'margin-top: 25px; padding: 10px 0; border-bottom: 1px solid #555; border-top: 1px solid #555;'}
+      %h3= link_to "Preview the new OpenShift Management Console >>", console_path
+      %p
+        The new console will replace the control panel and offer a much deeper web experience for 
+        OpenShift application management.  We wanted to share a preview of the changes that are coming, but 
+        be aware that there may be a few minor glitches left as we straighten everything out.
+
+      %p
+        If you hit a problem or want to let us know how you feel about the new console, #{link_to "post in the Express forum", post_to_forum_url}.
+
     #docs.intro
       %header
         %h1 Getting Started 
