--- a/site/app/views/layouts/console.html.haml
+++ b/site/app/views/layouts/console.html.haml
@@ -18,6 +18,16 @@
       = yield :sub_layout
     - else
       .container#content
+        
+        .alert.alert-info.new-console
+          %p
+            %strong Preview
+            This is a preview of the new OpenShift Management Console. There may be a few 
+            minor glitches as we straighten things up &ndash; if you hit a problem or want to 
+            let us know how you feel about the new console,
+            #{link_to "post in the Express forum", post_to_forum_url}.
+          %p= link_to "<< Back to the Control Panel", control_panel_path
+
         = flashes
         = yield
 
