Integrate sass-twitter-bootstrap temporarily (should be gem'd), begin moving override code out of _custom.scss and into variables and sections that mimic their origin

--- a/site/app/views/layouts/_new_stylesheets.html.haml
+++ b/site/app/views/layouts/_new_stylesheets.html.haml
@@ -1,6 +1,6 @@
 -# CSS: implied media="all"
 = stylesheet_link_tag '/app/stylesheets/bootstrap.css', :media => 'all'
-= stylesheet_link_tag '/app/stylesheets/custom.css', :media => 'all'
+-# Moved into core scss = stylesheet_link_tag '/app/stylesheets/custom.css', :media => 'all'
 
 -# Append your own using content_for :stylesheets
 = yield :stylesheets
