--- a/site/app/stylesheets/_custom.scss
+++ b/site/app/stylesheets/_custom.scss
@@ -1,27 +1,3 @@
-/* Fonts
--------------------------------------------------- */
-@font-face {
-  font-family: 'OverpassBold';
-  src:url('fonts/overpass-bold-wf.eot');
-  src:url('fonts/overpass-bold-wf.eot?#iefix') format('eot'),
-      url('fonts/overpass-bold-wf.woff') format('woff'),
-      url('fonts/overpass-bold-wf.ttf') format('truetype'),
-      url('fonts/overpass-bold-wf.svg#webfontzRhIMntw') format('svg');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Overpass';
-  src:url('fonts/overpass-wf.eot');
-  src:url('fonts/overpass-wf.eot?#iefix') format('eot'),
-      url('fonts/overpass-wf.woff') format('woff'),
-      url('fonts/overpass-wf.ttf') format('truetype'),
-      url('fonts/overpass-wf.svg#webfontiqWxLEM5') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
 /** Twitter Bootstrap Customizations
 ------------------------------------------------ 
 Colors
@@ -32,70 +8,17 @@ ABB64C -> green -> success
 93D8E2 -> lite blue -> info
 ------------------------------------------------ */
 
-/*FIXME: Can be handled via LESS on the core bootstrap template? */
-body, p, button, select, textarea, .navbar-search .search-query {
-	font-family: "Liberation Sans", Helvetica, Arial, sans-serif;
-  }
 a {
 	color: #0069d6; 
 	}
 a:hover {
   color: #00438a;
 	}
-p {
-	margin: 5px 0 13px;
-	}
-h1,h2,h3,h4,h5,.headline {
-	font-family: Overpass, Helvetica, Arial, sans-serif;
-	font-weight: normal;
-	}
-h1 {
-  font-size: 30px;
-  line-height: 36px;
-  margin-bottom: 10px;
-}
-h2 {
-  font-size: 22px;
-  line-height: 36px;
-  margin-bottom: 8px;
-}
-h3 {
-  line-height: 27px;
-  font-size: 18px;
-  margin-bottom: 8px;
-	}
-h4 {
-	font-size: 16px;
-	}
-h5 {
-	font-size: 14px;
-	}
-h6 {
-	font-size: 11px;
-	}
-figure {
-	margin: 0;
-	padding: 0;
-	}
 #content {
 	min-height: 550px;
 	}
 .page-header {
 	padding-bottom: 0;
-	}
-ol.unstyled {
-  margin-left: 0;
-  list-style: none;
-	}
-pre {
-	-webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-	}
-pre.cli {
-	color: #000c5a;
-	background-color: #E9ECFF;
-	border: none;
 	}
 .label {
   padding: 3px 3px 1px;
@@ -696,9 +619,9 @@ input:focus, textarea:focus {
   background-image: -o-linear-gradient(top, #f7f7d2, #f0f29b);
   background-image: linear-gradient(top, #f7f7d2, #f0f29b);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f7f7d2', endColorstr='#f0f29b', GradientType=0);
-  background-repeat: repeat-x;  
-  -webkit-box-shadow: 0 2px 12px rgba(0,0,0,.5);
-  -moz-box-shadow: 0 2px 12px (rgba(0,0,0.5));
+  background-repeat: repeat-x;
+  -webkit-box-shadow: 0 2px 12px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0 2px 12px rgba(0,0,0,0.5);
   box-shadow: 0 1px 2px #aaa;
 }
 .postit .tape {
