--- a/site/app/views/layouts/styleguide.html.haml
+++ b/site/app/views/layouts/styleguide.html.haml
@@ -9,7 +9,7 @@
 
     -# CSS: implied media="all"
     = stylesheet_link_tag '/app/stylesheets/bootstrap.css', :media => 'all'
-    = stylesheet_link_tag '/app/stylesheets/custom.css', :media => 'all'
+    -# moved into core scss = stylesheet_link_tag '/app/stylesheets/custom.css', :media => 'all'
     -# Append your own using content_for :stylesheets
     = yield :stylesheets
     -# No longer support :stylesheet_partial
