Use absolute path on logo

--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -3,7 +3,7 @@
     .container
 
       = link_to root_path, :class => 'brand' do
-        %img{:src => image_path('openshift-logo-white.png')}
+        %img{:src => image_path('/app/images/openshift-logo-white.png')}
 
       %span.navbar-text.headline 
         Management Console
