Fix tc_console failures, revert tc_signup.rb to see if we can trigger the failure again

--- a/site/app/views/express_ssh_keys/_ssh_key_list.html.haml
+++ b/site/app/views/express_ssh_keys/_ssh_key_list.html.haml
@@ -8,4 +8,4 @@
 %div{:style => "clear: both"}
 
 %p
-  = link_to "Add", add_sshkey_express_sshkeys_path
+  = link_to "Add", add_sshkey_express_sshkeys_path, :class => 'add-ssh-key'
