--- a/site/app/stylesheets/bootstrap.scss
+++ b/site/app/stylesheets/bootstrap.scss
@@ -70,4 +70,6 @@
 // Utility classes
 @import "bootstrap/utilities"; // Has to be last to override when necessary
 
+@import "bootstrap/responsive";
+
 @import "custom"
