Working prototype of community blog page

--- a/site/app/stylesheets/_custom.scss
+++ b/site/app/stylesheets/_custom.scss
@@ -728,7 +728,7 @@ footer {
 	background-color: #574D4F;
   color: #eee;
   }
-.console-transition #copyright {
+#copyright {
   color: #eee;
 	background-color: black;
   }
