--- a/site/app/views/styleguide/community.html.haml
+++ b/site/app/views/styleguide/community.html.haml
@@ -6,6 +6,8 @@
   .column-content { background-color: white; }
   #contents > .container > div > .row { background-color: #f5f5f5; }
 
+  /* Nav section */
+
   #nav .navigation-bar { padding-top: 30px; height: 130px; position: relative; }
   .navigation-bar > .brand { position: relative; top: 70px; text-align: center; }
   .navigation-bar > ul.navigation > li.group-one { float: left; width: 20%; }
@@ -13,9 +15,10 @@
   .navigation-bar > ul.navigation > li.group-two { float: right; width: 20%; text-align: right; }
 
   @media (max-width: 767px) {
+    #nav .navigation-bar { height: 100px; }
     .navigation-bar > .brand { position: static; float: left; text-align: center; width: 100px; }
-    .navigation-bar > ul.navigation { float: left; }
-    .navigation-bar > ul.navigation > li { float: none !important; width: auto !important; text-align: left !important;}
+    .navigation-bar > ul.navigation { margin-left: 110px; }
+    .navigation-bar > ul.navigation > li { float: left !important; width: 50% !important; text-align: center !important;}
   }
 
   .navigation-bar > ul.navigation { font-size: 13px; text-transform: uppercase }
@@ -23,7 +26,7 @@
   .navigation-bar > ul.navigation > li.active > a { border-bottom: 2px solid white; padding-bottom: 4px; }
   .brand { text-transform: uppercase; }
 
-  .messaging { margin-bottom: 30px; }
+  .messaging { margin-bottom: 30px; clear: both; }
   .messaging { color: #bbb; text-align: center;}
   .messaging > .primary { font-size: 40px; line-height: 40px;}
   .messaging > .primary { text-transform: uppercase; }
@@ -36,6 +39,8 @@
     .messaging > .primary { font-size: 20px; line-height: 20px;}
     .messaging > .secondary { font-size: 13px; line-height: 18px; }
   }
+
+  /* Content section */
 
   #nav { padding-bottom: 100px; }
   #contents .lift { }
@@ -56,16 +61,41 @@
   #contents .row > .column-content { padding-bottom: 30px; }
   #contents .row { margin-bottom: 20px; }
 
-  #contents .column-nav .navigation-location { font-size: 22px; line-height: 46px; text-transform: uppercase; margin-top: 15px; }
+  /* Left nav section */
+
+  #contents .column-nav .navigation-location { font-size: 19px; line-height: 46px; text-transform: uppercase; margin-top: 15px; }
   #contents .column-nav > * { margin-left: 20px; }
+  #contents .column-nav > .nav-stacked { margin-left: 10px; }
+
+  .nav-stacked .nav-stacked { margin-left: 20px; margin-bottom: 0; }
 
   @media (max-width: 767px) {
-    #contents .column-nav > ul > li { float: left; width: 50%; }
+    #contents .column-nav > ul > li { float: left; width: 32%; }
     .navigation-location { display: none; }
   }
 
-  #contents h1 { background-color: red; color: white; box-shadow: 1px 2px 2px rgba(0,0,0,0.5); }
-  #contents h1 { margin-left: -35px; padding: 5px 20px 5px 30px; display: inline-block; }
+  /* Body */
+
+  .ribbon { position: relative; /* margin-left: -Xpx; */ }
+  .ribbon > .ribbon-content { z-index: 1; position: relative; /* padding-left: Xpx; */ }
+  .ribbon > .ribbon-left {
+    content: " ";
+    position: absolute;
+    left: 0;
+    /* border-top: Ypx solid color;
+       bottom: -Ypx;
+  	   border-left: Xpx solid transparent;
+    */
+  }
+
+  #contents h1.ribbon { margin-left: -30px; }
+  #contents h1.ribbon > .ribbon-content { background-color: red; color: white; box-shadow: 1px 2px 2px rgba(0,0,0,0.5); display: inline-block; }
+  #contents h1.ribbon > .ribbon-content { padding: 5px 20px 5px 30px; min-width: 30% }
+  #contents h1.ribbon > .ribbon-left {
+    border-top:10px solid #aa0000;
+    bottom:-10px;
+  	border-left:10px solid transparent;
+  }
 
 %header
   #top
@@ -103,15 +133,15 @@
           .navigation-location Community
 
           -# may need a block or three
-          %ul.menu.unstyled
+          %ul.menu.nav.nav-pills.nav-stacked
             %li.leaf= link_to "Overview", "overview"
             %li.expanded
               = link_to "Blogs", "blog"
-              %ul.menu
+              %ul.menu.nav.nav-pills.nav-stacked
                 %li.first.last.leaf= link_to "Planet OpenShift", "planet"
             %li.expanded
-              = link_to "Froums", "forums"
-              %ul.menu
+              = link_to "Forums", "forums"
+              %ul.menu.nav.nav-pills.nav-stacked
                 %li.first.leaf= link_to "Express", "express_forum"
                 %li.last.leaf= link_to "Open Source", "opensource_forum"
             %li.leaf= link_to "FAQs", "faq"
@@ -125,10 +155,12 @@
             %button.btn{:type => 'submit'} Search
 
         .span9.column-content
-          %h1 OpenShift Blog
+          %h1.ribbon
+            .ribbon-content OpenShift Blog
+            .ribbon-left
           .post-info
             .author
-              %span{:style => 'height: 24px; width: 24px; background-color: #555;'} P
+              %span{:style => 'display: inline-block; height: 24px; width: 24px; background-color: #555;'} P
               %span.name Issac Roth
             .metadata
               = link_to "Comments (0)", "create_comment"
@@ -158,6 +190,8 @@
             = link_to "share" do
               %span.invert +
               Share this post
+
+          %hr
 
 %footer
   #footer-nav
