Start using bootstrap styles, quick example of community markup from drupal (which can be changed), convert to SASS for navigation elements

--- a/site/app/stylesheets/bootstrap.scss
+++ b/site/app/stylesheets/bootstrap.scss
@@ -70,6 +70,7 @@
 // Utility classes
 @import "bootstrap/utilities"; // Has to be last to override when necessary
 
-@import "bootstrap/responsive";
+//@import "bootstrap/responsive";
+@import "responsive";
 
 @import "custom"
